# fts-beidconnect

./: .clang-format  .gitignore  CMakeLists.txt
common/: BEIDCard.cpp  BEIDCard.hpp  Card.hpp  CardErrors.h  CardFactory.cpp  CardFactory.hpp  CardReader.cpp  CardReader.hpp  CertChainRequestHandler.cpp  CertChainRequestHandler.hpp  IDRequestHandler.cpp  IDRequestHandler.hpp  InfoRequestHandler.cpp  InfoRequestHandler.hpp  ReaderList.cpp  ReaderList.hpp  Request.cpp  Request.hpp  RequestHandler.cpp  RequestHandler.hpp  SCard.cpp  SCard.hpp  SCardException.h  SignRequestHandler.cpp  SignRequestHandler.hpp  UserCertsRequestHandler.cpp  UserCertsRequestHandler.hpp  VersionRequestHandler.cpp  VersionRequestHandler.hpp  VirtualCard.cpp  VirtualCard.hpp  VirtualReader.cpp  VirtualReader.hpp  asn1.cpp  asn1.hpp  beid.h  comm.cpp  comm.hpp  crypto.cpp  crypto.h  (+16 more)
win32/VS_2022/: BeIDConnect.vcxproj  beidconnect.sln
